Improve gradle script